--- a/Unsolved/index.html
+++ b/Unsolved/index.html
@@ -11,19 +11,19 @@
 </head>
 <body>
   <main>
-<div class="box-1">BE HAPPY</div>
-<div class="box-2">Cupcake ipsum dolor. Sit amet marshmallow topping cheesecake muffin. Halvah croissant candy canes bonbon candy.Apple pie jelly beans topping carrot cake danish tart cake cheesecake. Muffin danish chocolate souffle pastry icing bonbon oat cake.</div>
-<div class="box-3">3</div>
-<div class="box-4"></div>
-<div class="box-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat alias nemo natus, deserunt reiciendis blanditiis voluptatem neque nobis quod, dolores unde ipsam laboriosam, dolor omnis velit cum consectetur assumenda modi.</div>
-<div class="box-6">6</div>
+    <div class="box thin one">BE HAPPY</div>
+    <div class="box thick two">Cupcake ipsum dolor. Sit amet marshmallow topping cheesecake muffin. Halvah croissant candy canes bonbon candy.Apple pie jelly beans topping carrot cake danish tart cake cheesecake. Muffin danish chocolate souffle pastry icing bonbon oat cake.</div>
+    <div class="box wide three">3</div>
+    <div class="box thin four"></div>
+    <div class="box thick five">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat alias nemo natus, deserunt reiciendis blanditiis voluptatem neque nobis quod, dolores unde ipsam laboriosam, dolor omnis velit cum consectetur assumenda modi.</div>
+    <div class="box wide six">6</div>
 
-<div class="hidden-xs">
-<div class="box-7">7</div>
-<div class="box-8">8</div>
-<div class="box-9">9</div>
-<div class="box-10">10</div>
-  </div>
+   
+    <div class="box seven hidden-xs">7</div>
+    <div class="box eight hidden-xs">8</div>
+    <div class="box nine hidden-xs">9</div>
+    <div class="box ten hidden-xs">Bacon Lorem ipsum dolor sit amet consectetur, adipisicing elit. A error repellendus beatae? Inventore minima obcaecati voluptatum nobis error illo vel nihil. Odit, possimus vel quisquam deleniti distinctio reprehenderit error. Nostrum.</div>
+  
 
   </main>
   
