--- a/Unsolved/index.html
+++ b/Unsolved/index.html
@@ -11,18 +11,18 @@
 </head>
 <body>
   <main>
-    <div class="box thin one">BE HAPPY</div>
-    <div class="box thick two">Cupcake ipsum dolor. Sit amet marshmallow topping cheesecake muffin. Halvah croissant candy canes bonbon candy.Apple pie jelly beans topping carrot cake danish tart cake cheesecake. Muffin danish chocolate souffle pastry icing bonbon oat cake.</div>
-    <div class="box wide three">3</div>
-    <div class="box thin four"></div>
-    <div class="box thick five">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat alias nemo natus, deserunt reiciendis blanditiis voluptatem neque nobis quod, dolores unde ipsam laboriosam, dolor omnis velit cum consectetur assumenda modi.</div>
-    <div class="box wide six">6</div>
+    <div class="box one">BE HAPPY</div>
+    <div class="box two">Cupcake ipsum dolor. Sit amet marshmallow topping cheesecake muffin. Halvah croissant candy canes bonbon candy.Apple pie jelly beans topping carrot cake danish tart cake cheesecake. Muffin danish chocolate souffle pastry icing bonbon oat cake.</div>
+    <div class="box three"></div>
+    <div class="box four"></div>
+    <div class="box five">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat alias nemo natus, deserunt reiciendis blanditiis voluptatem neque nobis quod, dolores unde ipsam laboriosam, dolor omnis velit cum consectetur assumenda modi.</div>
+    <div class="box six"></div>
 
    
-    <div class="box seven hidden-xs">7</div>
-    <div class="box eight hidden-xs">8</div>
-    <div class="box nine hidden-xs">9</div>
-    <div class="box ten hidden-xs">Bacon Lorem ipsum dolor sit amet consectetur, adipisicing elit. A error repellendus beatae? Inventore minima obcaecati voluptatum nobis error illo vel nihil. Odit, possimus vel quisquam deleniti distinctio reprehenderit error. Nostrum.</div>
+    <div class="box seven">7</div>
+    <div class="box eight">8</div>
+    <div class="box nine">9</div>
+    <div class="box ten">Bacon Lorem ipsum dolor sit amet consectetur, adipisicing elit. A error repellendus beatae? Inventore minima obcaecati voluptatum nobis error illo vel nihil. Odit, possimus vel quisquam deleniti distinctio reprehenderit error. Nostrum.</div>
   
 
   </main>
