--- a/Unsolved/index.html
+++ b/Unsolved/index.html
@@ -1,42 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link href="https://fonts.googleapis.com/css?family=Montserrat:400,800|Source+Sans+Pro" rel="stylesheet">  
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:400,800|Source+Sans+Pro" rel="stylesheet">
   <link rel="stylesheet" href="reset.css">
   <link rel="stylesheet" href="style.css">
   <title>Document</title>
 </head>
+
 <body>
+  <strong>login</strong>
   <main>
-    <div class="box one">BE HAPPY</div>
-    <div class="box two">Cupcake ipsum dolor. Sit amet marshmallow topping cheesecake muffin. Halvah croissant candy canes bonbon candy.Apple pie jelly beans topping carrot cake danish tart cake cheesecake. Muffin danish chocolate souffle pastry icing bonbon oat cake.</div>
+    <div class="box one text-box">BE HAPPY</div>
+    <div class="box two text-box">
+      <p>Cupcake ipsum dolor. Sit amet marshmallow topping cheesecake muffin. Halvah croissant candy canes bonbon candy.Apple
+        pie jelly beans topping carrot cake danish tart cake cheesecake. Muffin danish chocolate souffle pastry icing bonbon
+        oat cake.</p>
+    </div>
     <div class="box three"></div>
     <div class="box four"></div>
-    <div class="box five">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat alias nemo natus, deserunt reiciendis blanditiis voluptatem neque nobis quod, dolores unde ipsam laboriosam, dolor omnis velit cum consectetur assumenda modi.</div>
+    <div class="box five text-box">
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat alias nemo natus, deserunt reiciendis blanditiis
+        voluptatem neque nobis quod, dolores unde ipsam laboriosam, dolor omnis velit cum consectetur assumenda modi.</p>
+    </div>
     <div class="box six"></div>
 
-   
-    <div class="box seven">7</div>
-    <div class="box eight">8</div>
-    <div class="box nine">9</div>
-    <div class="box ten">Bacon Lorem ipsum dolor sit amet consectetur, adipisicing elit. A error repellendus beatae? Inventore minima obcaecati voluptatum nobis error illo vel nihil. Odit, possimus vel quisquam deleniti distinctio reprehenderit error. Nostrum.</div>
-  
+
+    <div class="box seven"></div>
+    <div class="box eight text-box">
+      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. A error repellendus beatae? Inventore minima obcaecati voluptatum
+        nobis error illo vel nihil. Odit, possimus vel quisquam deleniti distinctio reprehenderit error. Nostrum.</p>
+    </div>
+    <div class="box nine"></div>
+    <div class="box ten"></div>
+
 
   </main>
-  
+
 </body>
+
 </html>
-
-
-
-
-
-
-
-
-
-
-
